Fix overflow and add more meta tags

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,5 +12,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
